# hicxai-research

./: .env.example  .gitignore  .python-version  README.md  app_condition_2.py  app_condition_3.py  app_condition_4.py  app_condition_5.py  app_v0.py  app_v1.py  environment_rtx5070.yml  pyproject.toml  quick_test.sh  requirements-streamlit.txt  requirements.txt  requirements_rtx5070_torch.txt  runtime.txt  test_llm_validation.sh
.streamlit/: README.md  config.toml  secrets.toml.example  secrets.toml.template
data_questions/: Median_4.csv
dataset_info/: adult.json
models/: focused_xai_classifier.pth  focused_xai_classifier_best.pth  intent_classifier.pth  intent_classifier_best.pth  xagent_classifier.pth
scripts/: analyze_median4.py  smoke_test_agent.py  smoke_test_nlu_st.py
src/: ab_config.py  agent.py  answer.py  app.py  app_old_tabs.py  constraints.py  data_logger.py  env_loader.py  github_saver.py  load_adult_data.py  loan_assistant.py  natural_conversation.py  nlu.py  preprocessing.py  shap_visualizer.py  train_classifiers.py  utils.py  xai_methods.py
