[tool.poetry]
name = "hicxai-agent"
package-mode = false
version = "0.1.0"
description = ""
authors = ["ksauka <k.sauka@hva.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Core ML/NLP dependencies
transformers = ">=4.35.0"
numpy = ">=1.24.0"
torch = ">=2.7.0"
# Semantic search: use sentence-transformers (SimCSE removed)
sentence-transformers = ">=2.7.0"
# XAI libraries  
shap = ">=0.43.0"
dice-ml = ">=0.10.0"
anchor-exp = ">=0.0.2"
# Web interface
streamlit = ">=1.28.0"
# Utilities
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
matplotlib = ">=3.7.0"
# Visualization dependencies
dtreeviz = ">=2.2.2"
graphviz = ">=0.20.3"
# Optional optimization
optuna = ">=4.5.0"
accelerate = ">=0.24.0"
# Optional: Generative rewriter (GPT-3.5 Turbo or compatible)
openai = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
